bpo-34854: Fix a crash in string annotations containing specific lambda.

Compiling a string annotation containing a lambda with keyword-only
argument without default value caused a crash.